200 OK http://www.parliament.gh/parliamentarians/page/260

--- a/www.parliament.gh/2684287b3c52ba38baf5b6f3acab7ffb591ed9ab.yml
+++ b/www.parliament.gh/2684287b3c52ba38baf5b6f3acab7ffb591ed9ab.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:48:16 GMT
+    - Thu, 17 Nov 2016 18:41:38 GMT
     Server:
     - Apache
     X-Powered-By:
@@ -30,18 +30,18 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=effa5a098b4f81d5fb82cda9a2f226f7; path=/
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%229e7340dceeca8028698bcd2b9169e3ab%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479383296%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Ddde4309aee4a36e51699975f36501523;
-      expires=Thu, 17-Nov-2016 13:48:16 GMT; path=/
-    - csrf_xmen=eb082b45dcf95eaedd2ead66f7022218; expires=Thu, 17-Nov-2016 13:48:16
+    - PHPSESSID=b05e7bdf0b85c2e5ed00d58e222ec9ef; path=/
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%225d5bdeda0e68661aee21ae5730727049%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479408098%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df769f044b6ec8cf131f2e5964e62d84c;
+      expires=Thu, 17-Nov-2016 20:41:38 GMT; path=/
+    - csrf_xmen=03955434e2cd444bd0e4e60d456654b2; expires=Thu, 17-Nov-2016 20:41:38
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '64272'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:48:16 GMT
+recorded_at: Thu, 17 Nov 2016 18:41:38 GMT
