200 OK http://www.parliament.gh/parliamentarians/230

--- a/www.parliament.gh/3dbb6dc602bb5f5f242eed9a175e784788f29cac.yml
+++ b/www.parliament.gh/3dbb6dc602bb5f5f242eed9a175e784788f29cac.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:50:14 GMT
+    - Thu, 17 Nov 2016 18:44:55 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e323e4c21d9fa693cd37b7c274c7b730%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479383414%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D906db8a6616900abb4af6f6226b0d155;
-      expires=Thu, 17-Nov-2016 13:50:14 GMT; path=/
-    - csrf_xmen=2caa92c4c2ced0c414900f9be297d356; expires=Thu, 17-Nov-2016 13:50:14
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22200797606980655f8fc15c4611697b22%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479408295%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Db7a395819196ee0cd21da16f896833e7;
+      expires=Thu, 17-Nov-2016 20:44:55 GMT; path=/
+    - csrf_xmen=e604ada84a92e6866a2f1aaf673acff9; expires=Thu, 17-Nov-2016 20:44:55
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16995'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:50:14 GMT
+recorded_at: Thu, 17 Nov 2016 18:44:55 GMT
