200 OK http://www.parliament.gh/parliamentarians/310

--- a/www.parliament.gh/2028dae3a38f45e27732c9273312aef86de9ed8e.yml
+++ b/www.parliament.gh/2028dae3a38f45e27732c9273312aef86de9ed8e.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:50:31 GMT
+    - Thu, 17 Nov 2016 18:45:27 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22c40af132650acf7bb88b925b3b65e966%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479383431%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Decd4f4bf3ecc7e8d27fab3017e08225a;
-      expires=Thu, 17-Nov-2016 13:50:31 GMT; path=/
-    - csrf_xmen=e52a2450ad655a1b16b4f34439790130; expires=Thu, 17-Nov-2016 13:50:31
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%223d4a8698dd50c4883b318f6813624820%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479408327%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dfb2ea9e5ac69b6b877210a06a49dbbc0;
+      expires=Thu, 17-Nov-2016 20:45:27 GMT; path=/
+    - csrf_xmen=747904b97ec4b1aea99d727b79a0ca88; expires=Thu, 17-Nov-2016 20:45:27
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16459'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:50:31 GMT
+recorded_at: Thu, 17 Nov 2016 18:45:28 GMT
