200 OK http://www.parliament.gh/parliamentarians/415

--- a/www.parliament.gh/864388632f5bf5711f028e88c15761967125b6d4.yml
+++ b/www.parliament.gh/864388632f5bf5711f028e88c15761967125b6d4.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:50:46 GMT
+    - Thu, 17 Nov 2016 18:45:56 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22a86d72ce837114c9a29f84645f31a9f7%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479383446%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D970989dcfda3107bc7745499f5dd02b0;
-      expires=Thu, 17-Nov-2016 13:50:46 GMT; path=/
-    - csrf_xmen=2a7211ec20f18b0e0061d80b3d4b9f1a; expires=Thu, 17-Nov-2016 13:50:46
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22f50cdc261258f1a25da32f65ad88da88%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479408356%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dba14034c35e9ae40de24a4e68f2486ad;
+      expires=Thu, 17-Nov-2016 20:45:56 GMT; path=/
+    - csrf_xmen=304029378c0f0c57ed7f50c022ce19d5; expires=Thu, 17-Nov-2016 20:45:56
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16612'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:50:47 GMT
+recorded_at: Thu, 17 Nov 2016 18:45:56 GMT
