200 OK http://www.parliament.gh/parliamentarians/232

--- a/www.parliament.gh/d78df14b0b1a481667ade865f8e3a2621316bfcd.yml
+++ b/www.parliament.gh/d78df14b0b1a481667ade865f8e3a2621316bfcd.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:51:03 GMT
+    - Thu, 17 Nov 2016 18:46:24 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2231e24bff8d2e51b898947c3984632909%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479383463%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D63d5d5b7234032ab8d76a0f701fbeae7;
-      expires=Thu, 17-Nov-2016 13:51:03 GMT; path=/
-    - csrf_xmen=a2a99772a8143f6cb78dd19faedb018c; expires=Thu, 17-Nov-2016 13:51:03
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22559ce79efcd5df4d1134a020c28a156b%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479408384%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D2923e44cf1f57c53ea431b62110be200;
+      expires=Thu, 17-Nov-2016 20:46:24 GMT; path=/
+    - csrf_xmen=813a0375fde66805140ce8a22738ed26; expires=Thu, 17-Nov-2016 20:46:24
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16555'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:51:03 GMT
+recorded_at: Thu, 17 Nov 2016 18:46:25 GMT
