200 OK http://www.parliament.gh/parliamentarians/328

--- a/www.parliament.gh/f3051ec0373a3c89f7819509c530097ee2e62b88.yml
+++ b/www.parliament.gh/f3051ec0373a3c89f7819509c530097ee2e62b88.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:51:24 GMT
+    - Thu, 17 Nov 2016 18:46:52 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%229a323444c7d923fb377601c177f7eef8%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479383484%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D0b4c740f08255c116b897bf3f46ad653;
-      expires=Thu, 17-Nov-2016 13:51:24 GMT; path=/
-    - csrf_xmen=b01aa0aee81aaf2328a99673627f876d; expires=Thu, 17-Nov-2016 13:51:24
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22027d7f11822015c68f3e79bdbcb7f908%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479408412%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D339802cdeb5b6367c92d1d143f503dbc;
+      expires=Thu, 17-Nov-2016 20:46:52 GMT; path=/
+    - csrf_xmen=3254670f87e45e715990f83abbb127fb; expires=Thu, 17-Nov-2016 20:46:52
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16629'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:51:24 GMT
+recorded_at: Thu, 17 Nov 2016 18:46:52 GMT
