--- a/www.parliament.gh/f54f81fbf476f1bdd5c8108cf8c102c6ec2533f8.yml
+++ b/www.parliament.gh/f54f81fbf476f1bdd5c8108cf8c102c6ec2533f8.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:51:41 GMT
+    - Thu, 17 Nov 2016 18:47:29 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%225b769a17988197257d6fbb851c182abe%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479383501%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D56165a1dd55b7746682d7d72e6d343f9;
-      expires=Thu, 17-Nov-2016 13:51:41 GMT; path=/
-    - csrf_xmen=87d16dc5ee4cd31601f2b204baa0b90e; expires=Thu, 17-Nov-2016 13:51:41
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22c9b67625644866684d5c5c1c02d749b5%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479408449%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D3db022aa99738c045fbdf01c6a1aef2e;
+      expires=Thu, 17-Nov-2016 20:47:29 GMT; path=/
+    - csrf_xmen=7780f80970f7c464fcf86cf71d705b9d; expires=Thu, 17-Nov-2016 20:47:29
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16483'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:51:41 GMT
+recorded_at: Thu, 17 Nov 2016 18:47:29 GMT
