--- a/www.parliament.gh/b2bd269efc8bbb1594e715aaee9b85c808d771cc.yml
+++ b/www.parliament.gh/b2bd269efc8bbb1594e715aaee9b85c808d771cc.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:51:56 GMT
+    - Thu, 17 Nov 2016 18:47:51 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%220c9a71d79358366a1bc62074e84b2f42%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479383516%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D5e057ee41c462dbbe3648f1b5de57116;
-      expires=Thu, 17-Nov-2016 13:51:56 GMT; path=/
-    - csrf_xmen=7c111e7058b1121df95299b3d2a9d18e; expires=Thu, 17-Nov-2016 13:51:56
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2218749435f9f65e4b8cb59be7ef8354bb%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479408471%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D9825a28bfb83b169ae99ddffdcde8842;
+      expires=Thu, 17-Nov-2016 20:47:51 GMT; path=/
+    - csrf_xmen=e43da743374cf5861e244ab8597a8a61; expires=Thu, 17-Nov-2016 20:47:51
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16916'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:51:56 GMT
+recorded_at: Thu, 17 Nov 2016 18:47:52 GMT
