--- a/www.parliament.gh/d987a039f3c7a34119c4c5a9b7f6278e18d4bb1c.yml
+++ b/www.parliament.gh/d987a039f3c7a34119c4c5a9b7f6278e18d4bb1c.yml
@@ -18,18 +18,20 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 16:20:12 GMT
+    - Fri, 18 Nov 2016 06:42:03 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22bdeab7a7d8c2c6740aae605a6d25111a%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399612%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Daed62169e0b2e2532996cc7791c3b0b7;
-      expires=Thu, 17-Nov-2016 18:20:12 GMT; path=/
-    - csrf_xmen=fa25df5d61843371c18f6b7923da78f5; expires=Thu, 17-Nov-2016 18:20:12
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e6fd909b245af3696645ad370db77c1e%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479451324%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D3733cabce4eaa80982462052cb7ff3eb;
+      expires=Fri, 18-Nov-2016 08:42:04 GMT; path=/
+    - csrf_xmen=3c97fc8b98df9a7cfa17b7a25e21d6cd; expires=Fri, 18-Nov-2016 08:42:04
       GMT; path=/
     X-Server:
     - '3908'
+    Connection:
+    - close
     Content-Type:
     - text/html; charset=iso-8859-1
     Content-Length:
@@ -37,4 +39,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 16:20:12 GMT
+recorded_at: Fri, 18 Nov 2016 06:42:04 GMT
