--- a/www.parliament.gh/259a6727a4baa95e3aee79169a25931a7822eb41.yml
+++ b/www.parliament.gh/259a6727a4baa95e3aee79169a25931a7822eb41.yml
@@ -18,18 +18,20 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 29 Nov 2016 12:03:43 GMT
+    - Tue, 29 Nov 2016 17:02:54 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%224c0e98b86f0ddeef60b20ad56cfd9704%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1480421023%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D62158cf8cbfb9ffe367aafbecab9dd43;
-      expires=Tue, 29-Nov-2016 14:03:43 GMT; path=/
-    - csrf_xmen=b195e370f02668c06dd9974d2021f7cc; expires=Tue, 29-Nov-2016 14:03:43
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d2b2709f1afe57d262cb7737386f958d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1480438974%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D1ff4dc6d63b99f41c698a023fdc1085b;
+      expires=Tue, 29-Nov-2016 19:02:54 GMT; path=/
+    - csrf_xmen=d478b242cf33ff56369b7d572ae6559a; expires=Tue, 29-Nov-2016 19:02:54
       GMT; path=/
     X-Server:
     - '3908'
+    Connection:
+    - close
     Content-Type:
     - text/html; charset=iso-8859-1
     Content-Length:
@@ -37,4 +39,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 29 Nov 2016 12:03:43 GMT
+recorded_at: Tue, 29 Nov 2016 17:02:55 GMT
